--- a/css/style.css
+++ b/css/style.css
@@ -1734,7 +1734,7 @@ div.table-title {
   margin: auto;
   max-width: 600px;
   padding:5px;
-  width: 100%;
+  width: 1000px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   animation: float 5s infinite;
 }
