--- a/EasyMVC/views/css/button.css
+++ b/EasyMVC/views/css/button.css
@@ -34,3 +34,27 @@
     margin: 4px 2px;
     cursor: pointer;
 }
+.addbutton {
+    background-color:  #404040;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.modifybutton {
+    background-color:  #ff751a;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
